Creacion de la pagina de registrar habitaciones

--- a/SweetDreams/SweetDreams.Api/SweetDreams.Api.csproj
+++ b/SweetDreams/SweetDreams.Api/SweetDreams.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
