--- a/SweetDreams/SweetDreams.Api/appsettings.Development.json
+++ b/SweetDreams/SweetDreams.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source = Data//Proyecto.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
