--- a/SweetDreams/SweetDreams.Client/SweetDreams.Client.csproj
+++ b/SweetDreams/SweetDreams.Client/SweetDreams.Client.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Pages\Registros Clientes\" />
+  </ItemGroup>
+
 </Project>
