--- a/SweetDreams/SweetDreams.Client/SweetDreams.Client.csproj
+++ b/SweetDreams/SweetDreams.Client/SweetDreams.Client.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Resources\HotelPNG.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Resources\HotelPNG.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
