--- a/SweetDreams/SweetDreams.Admin/SweetDreams.Admin.csproj
+++ b/SweetDreams/SweetDreams.Admin/SweetDreams.Admin.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
