--- a/SweetDreams/SweetDreams.Clients/wwwroot/appsettings.json
+++ b/SweetDreams/SweetDreams.Clients/wwwroot/appsettings.json
@@ -2,5 +2,6 @@
   "Local": {
     "Authority": "https:login.microsoftonline.com/",
     "ClientId": "33333333-3333-3333-33333333333333333"
-  }
+  },
+  "apiUrl": "http://localhost:5000"
 }
