--- a/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
+++ b/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+    <PackageReference Include="bootstrap" Version="5.0.0-alpha2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
