--- a/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
+++ b/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,4 +44,7 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Reportes\" />
+  </ItemGroup>
 </Project>
