--- a/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
+++ b/SweetDreams/SweetDreams.Clients/SweetDreams.Clients.csproj
@@ -30,13 +30,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\Resources\back.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\Resources\Doble.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Resources\guest-house-graceland-lobby.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\Resources\junior-suite-private-pool.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\Resources\master1 suite.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Resources\MLB-Villa-Outdoor-Fireplace.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="wwwroot\Resources\Piscina.jpg">
